--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -1,5 +1,5 @@
 $card-max-width:      340px;
-$card-image-width:    320px;
+$card-image-width:    100%;
 $card-image-height:   225px;
 $card-height:         368px;
 $card-gap:            10px;
