--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,7 +18,6 @@ body, #app {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
     height: 100%;
     gap: 15px;
 }
